lab1/tf-squid/aws_eip__eipalloc-031062066ecd1a324.tf
# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_eip.eipalloc-031062066ecd1a324:
resource "aws_eip" "eipalloc-031062066ecd1a324" {
  network_border_group = "eu-west-1"
  public_ipv4_pool     = "amazon"
  tags = {
    "Name" = "EIP 1 - squid-ecr"
  }
  tags_all = {
    "Name" = "EIP 1 - squid-ecr"
  }
  vpc = true
}
