lab1/tf-squid/aws_eip__eipalloc-0acc910452c2d2ec4.tf
# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_eip.eipalloc-0acc910452c2d2ec4:
resource "aws_eip" "eipalloc-0acc910452c2d2ec4" {
  network_border_group = "eu-west-1"
  public_ipv4_pool     = "amazon"
  tags = {
    "Name" = "EIP 2 - squid-ecr"
  }
  tags_all = {
    "Name" = "EIP 2 - squid-ecr"
  }
  vpc = true
}
