lab1/tf-squid/aws_lb_target_group__arn_aws_elasticloadbalancing_eu-west-1_666763910423_targetgroup_squid-ecr-ECSTargetGroup_f7218ecccd33a618.tf
# File generated by aws2tf see https://github.com/aws-samples/aws2tf
resource "aws_lb_target_group" "arn_aws_elasticloadbalancing_targetgroup_squid-ecr" {
  connection_termination            = false
  deregistration_delay              = "300"
  ip_address_type                   = "ipv4"
  load_balancing_cross_zone_enabled = "use_load_balancer_configuration"
  name                              = "squid-ecr-ECSTargetGroup"
  port                              = 3128
  preserve_client_ip                = "false"
  protocol                          = "TCP"
  proxy_protocol_v2                 = false
  tags                              = {}
  tags_all                          = {}
  target_type                       = "ip"
  vpc_id                            = aws_vpc.vpc-090fcf5a7a3b94d20.id

  health_check {
    enabled             = true
    healthy_threshold   = 5
    interval            = 30
    port                = "traffic-port"
    protocol            = "TCP"
    timeout             = 10
    unhealthy_threshold = 2
  }

  stickiness {
    cookie_duration = 0
    enabled         = false
    type            = "source_ip"
  }

}
