lab1/tf-squid/aws_security_group_rule__sg-0b7aada9480a491f5_ingress_3.tf
# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_security_group_rule.sg-0b7aada9480a491f5_ingress_1:
resource "aws_security_group_rule" "sg-0b7aada9480a491f5_ingress_1" {
  cidr_blocks = [
    "10.0.0.0/21",
  ]
  description       = "Allow Proxy traffic from the VPC"
  from_port         = 8080
  prefix_list_ids   = []
  protocol          = "tcp"
  security_group_id = aws_security_group.sg-0b7aada9480a491f5.id
  to_port           = 8080
  type              = "ingress"
}
