lab1/tf-squid/aws_vpc__vpc-090fcf5a7a3b94d20.tf
# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_vpc.vpc-090fcf5a7a3b94d20:
resource "aws_vpc" "vpc-090fcf5a7a3b94d20" {
  assign_generated_ipv6_cidr_block     = false
  cidr_block                           = "10.0.0.0/21"
  enable_dns_hostnames                 = false
  enable_dns_support                   = true
  enable_network_address_usage_metrics = false
  instance_tenancy                     = "default"
  tags = {
    "Name" = "VPC - squid-ecr"
  }
  tags_all = {
    "Name" = "VPC - squid-ecr"
  }
}
